[package]
name = "myso-gas-station"
version = "0.0.1"
edition = "2021"
authors = ["The Social Proof Foundation <brandon@socialproof.foundation.com>"]
license = "Apache-2.0"
repository = "https://github.com/the-social-proof-foundation/myso-core-gas-station"

[dependencies]
#myso-config = { path = "../myso-upstream/crates/myso-config" }
#myso-json-rpc-types = { path = "../myso-upstream/crates/myso-json-rpc-types" }
#myso-sdk = { path = "../myso-upstream/crates/myso-sdk" }
#myso-swarm-config = { path = "../myso-upstream/crates/myso-swarm-config" }
#myso-types = { path = "../myso-upstream/crates/myso-types" }
#shared-crypto = { path = "../myso-upstream/crates/shared-crypto" }
#telemetry-subscribers = { path = "../myso-upstream/crates/telemetry-subscribers" }
#test-cluster = { path = "../myso-upstream/crates/test-cluster" }
#typed-store = { path = "../myso-upstream/crates/typed-store" }
#typed-store-derive = { path = "../myso-upstream/crates/typed-store-derive" }

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", branch = "main" }
mysten-metrics = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main", package = "mysten-metrics" }
myso-config = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main", package = "myso-config" }
myso-json-rpc-types = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main", package = "myso-json-rpc-types" }
myso-sdk = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main", package = "myso-sdk" }
myso-types = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main", package = "myso-types" }
shared-crypto = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main", package = "shared-crypto" }
telemetry-subscribers = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main", package = "telemetry-subscribers" }

anyhow = "1.0.75"
async-trait = "0.1.51"
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
http-body = "1.0"
tower-http = "0.5"
bcs = "0.1.6"
clap = "4.4.10"
chrono = "0.4.39"
const-str = "0.5.6"
eyre = "0.6.9"
futures-util = "0.3.30"
git-version = "0.3.9"
itertools = "0.12.0"
moka = { version = "0.12", features = ["sync"] }
once_cell = "1.19.0"
parking_lot = "0.12.1"
prometheus = "0.13.3"
rand = "0.8.5"
redis = { version = "0.25.0", features = [
    "default",
    "async-std-comp",
    "connection-manager",
] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_with = "3.4.0"
schemars = "0.8.16"
tap = "1.0.1"
tempfile = "3.2.0"
tracing = "0.1.40"
tokio = { version = "1.49", features = ["full"] }
tokio-retry = "0.3.0"
serde_json = "1.0.108"

[dev-dependencies]
rand = "0.8.5"

myso-swarm-config = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main", package = "myso-swarm-config" }
test-cluster = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main", package = "test-cluster" }

# Using custom-profile-contract-add branch which fixes axum-server compatibility issues

[profile.release]
panic = "abort"
